[ VSE ] Text strip does not adapt to export resolution #75712

Closed
opened 2020-04-14 09:16:44 +02:00 by Telmo Silva · 7 comments

System Information
Operating system: Linux-5.5.15-200.fc31.x86_64-x86_64-with-fedora-31-Thirty_One 64 Bits
Graphics card: Mesa DRI Intel(R) HD Graphics 620 (Kaby Lake GT2) Intel Open Source Technology Center 4.5 (Core Profile) Mesa 19.2.8

Blender Version
Broken: version: 2.83 (sub 13), branch: master, commit date: 2020-04-13 17:13, hash: ad317a5ffd

Short description of error
Text strip does not adapt to export resolution

Screenshots below:

Render at 100%
Screenshot from 2020-04-14 09-12-18.png

Render at 25%
Screenshot from 2020-04-14 09-12-31.png

**System Information** Operating system: Linux-5.5.15-200.fc31.x86_64-x86_64-with-fedora-31-Thirty_One 64 Bits Graphics card: Mesa DRI Intel(R) HD Graphics 620 (Kaby Lake GT2) Intel Open Source Technology Center 4.5 (Core Profile) Mesa 19.2.8 **Blender Version** Broken: version: 2.83 (sub 13), branch: master, commit date: 2020-04-13 17:13, hash: `ad317a5ffd` **Short description of error** Text strip does not adapt to export resolution **Screenshots below:** Render at 100% ![Screenshot from 2020-04-14 09-12-18.png](https://archive.blender.org/developer/F8470654/Screenshot_from_2020-04-14_09-12-18.png) Render at 25% ![Screenshot from 2020-04-14 09-12-31.png](https://archive.blender.org/developer/F8470653/Screenshot_from_2020-04-14_09-12-31.png)
Author

Added subscriber: @nottelmo-4

Added subscriber: @nottelmo-4

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

Confirmed, this only happens when rendering, not for preview.

Confirmed, this only happens when rendering, not for preview.

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'

This issue was referenced by 0d4eefd231

This issue was referenced by 0d4eefd23113d4d2740e032e27ad47015ad687d0

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Campbell Barton self-assigned this 2020-04-15 06:22:32 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#75712
No description provided.