Fix T75712: Sequencer text strip doesn't scale to render size